--- a/new-events.html
+++ b/new-events.html
@@ -350,7 +350,7 @@
     });
 </script>
 <!-- Js Comomt -->
-<script src="js/jsCom.js" async></script>
+<script src="js/jsCom-v1.0.1.js" async></script>
 
 
 
