--- a/gfkjf.html
+++ b/gfkjf.html
@@ -403,7 +403,7 @@
     });
 </script>
 <!-- Js Comomt -->
-<script src="js/jsCom.js" async></script>
+<script src="js/jsCom-v1.0.1.js" async></script>
 
 
     <script src="js/owl.carousel.min.js"></script>
